# tambak

./: .gitignore  ARCHITECTURE.md  DEVELOPER_GUIDE.md  KERNEL_GUIDE.md  README.md  Rust.rs  Todo.md  USER_GUIDE.md  UnkownChatter.md  pyproject.toml  requirements.txt  test.txt  test_cols_4.3.1.txt  test_cols_4.3.2.txt  test_multiplex.py  test_results_3.9.txt  test_results_4.1  test_results_4.3.2.txt  testlarge.py  testlarge_results.md  testmpk.py  testmpk_v2.py  testmpk_v3.py  testmpkcols.py
ProofOfConceptRust/: test_hello.py
RustLib/: Cargo.toml
RustLib/.mds/: mod.rs.md  python.rs.md
RustLib/src/: DEV_DOCUMENTATION.md  error.rs  lib.rs  utils.rs
RustLib/src/ffi/: mod.rs  python.rs
RustLib/src/kernels/: TODO.md  bitpack.rs  delta.rs  leb128.rs  mod.rs  rle.rs  shuffle.rs  zigzag.rs  zstd.rs
RustLib/src/null_handling/: bitmap.rs  bitmap.rs.md  mod.rs
RustLib/src/pipeline/: executor.rs  frame_orchestrator.rs  mod.rs  orchestrator.rs  planner.rs
benchmarks/: test.py  test2.py  test461.py  test463.py  test_multiplex.py  test_results_4.3.1.txt  test_results_4.3.2.txt  test_results_4.5.0.txt  testcolsreorder.py  testlarge.py  testmpk.py  testmpk_v3.py  testmpkcols.py
benchmarks/results/: test_cols_4.3.1.txt  test_cols_4.3.2.txt  test_cols_4.5.0.txt  test_cols_4.5.1.txt  test_cols_4.6.0.txt  test_cols_4.6.2.txt  test_cols_4.6.3.txt  test_results_3.9.txt  test_results_4.0  test_results_4.1  test_results_4.1_canocalizationzeroes.txt  test_results_4.3.1.txt  test_results_4.3.2.txt  test_results_4.5.0.txt  test_results_4.5.1.txt  test_results_4.6.0.txt  test_results_4.6.1.txt  test_results_4.6.2.txt  test_results_4.6.3.txt  test_results_summary_4.6.2.csv  test_results_summary_4.6.3.csv
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  KERNEL_GUIDE.md  ROAD_MAP.md  USER_GUIDE.md
phoenix-core/: Cargo.toml
phoenix-core/benches/: ans_bench.rs  end_to_end_bench.rs  performance_suite.rs
phoenix-core/src/: error.rs  error.rs.md  lib.rs  observability.rs  traits.rs  utils.rs
phoenix-core/src/benches/: performance_suite.rs
phoenix-core/src/bridge/: arrow_impl.rs  compressor.rs  config.rs  decompressor.rs  format.rs  mod.rs  stateless_api.rs  tests.rs
phoenix-core/src/chunk_pipeline/: artifact.rs  context.rs  executor.rs  frame_orchestrator.rs  frame_orchestrator_tests.rs  mod.rs  models.rs  orchestrator_tests.rs  pipeline_generator.rs  planner.rs  planner_tests.rs  profiler.rs  traits.rs
phoenix-core/src/chunk_pipeline/orchestrator/: compress_helpers.rs  core.rs  decompress_helpers.rs  helpers.rs
phoenix-core/src/ffi/: ioadapters.rs  mod.rs  python.rs
phoenix-core/src/frame_pipeline/: column_strategies.rs  frame_orchestrator.rs  frame_orchestrator_tests.rs  mod.rs  profiler.rs  relinearize.rs  strategies.rs  tests.rs  util.rs
phoenix-core/src/kernels/: TODO.md  ans.rs  bitcast.rs  bitpack.rs  canonicalize.rs  delta.rs  dictionary.rs  leb128.rs  mod.rs  rle.rs  shuffle.rs  sparsity.rs  xor_delta.rs  zigzag.rs  zstd.rs
phoenix-core/src/kernels/unused/: UNUSED.md  sleb128.rs
phoenix-core/src/null_handling/: bitmap.rs  bitmap_tests.rs  mod.rs
phoenix-core/src/pipeline/: artifact.rs  executor.rs  executor.rs.md  frame_orchestrator.rs  frame_orchestrator_tests.rs  mod.rs  models.rs  orchestrator.rs  orchestrator.rs.md  orchestrator_tests.rs  pipeline_generator.rs  planner.rs  planner.rs.md  planner_tests.rs  profiler.rs  relinearize.rs  traits.rs
phoenix-core/src/pipeline/orchestrator/: compress_helpers.rs  core.rs  create_plan.rs  decompress_helpers.rs  helpers.rs  mod.rs
phoenix-core/src/types/: mod.rs  phoenix_data_type.rs
tambak-core/: Cargo.toml
tambak-core/benches/: ans_bench.rs  end_to_end_bench.rs
tambak-core/src/: config.rs  error.rs  lib.rs  observability.rs  traits.rs  utils.rs
tambak-core/src/bridge/: arrow_impl.rs  compressor.rs  config.rs  decompressor.rs  format.rs  mod.rs  stateless_api.rs  tests.rs
tambak-core/src/chunk_pipeline/: artifact.rs  context.rs  executor.rs  models.rs  orchestrator_tests.rs  pipeline_generator.rs  planner.rs  planner_tests.rs  profiler.rs  traits.rs
tambak-core/src/chunk_pipeline/orchestrator/: compress_helpers.rs  core.rs  decompress_helpers.rs  helpers.rs  mod.rs
tambak-core/src/ffi/: mod.rs  python.rs
tambak-core/src/frame_pipeline/: column_strategies.rs  mod.rs  profiler.rs  relinearize.rs  strategies.rs  util.rs
tambak-core/src/kernels/: ans.rs  bitcast.rs  bitpack.rs  canonicalize.rs  delta.rs  dictionary.rs  leb128.rs  mod.rs  rle.rs  shuffle.rs  sparsity.rs  xor_delta.rs  zigzag.rs  zstd.rs
tambak-core/src/null_handling/: bitmap.rs  mod.rs
tambak-core/src/types/: mod.rs  tambak_data_type.rs
