# This is the manifest for the Rust core of the Phoenix library.
[package]
name = "phoenix-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Core Rust library for the Phoenix high-performance compression protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/phoenix"

[lib]
name = "phoenix_cache"
crate-type = ["cdylib"]

[dependencies]
# --- FFI & Python Integration ---
pyo3 = { version = "0.20", features = ["extension-module"] }

# --- DataFrames & Arrow Integration ---
# We only depend on polars. It re-exports the correct, compatible version of arrow.
polars = { version = "0.37.0", features = ["dtype-full", "dtype-struct"] }
polars-arrow = { version = "0.37.0" }
pyo3-polars = "0.10.0"
arrow = {version = "25.0"}

# --- Core Utilities ---
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
bitvec = "1.0"
num-traits = "0.2"
serde_json = "1.0"

# --- Compression Kernels ---
zstd = "0.13"

# --- DEPENDENCY CONFLICT RESOLUTION ---
# This is still needed to solve a known low-level compilation error in polars-core v0.37.0
chrono = "= 0.4.39"
hashbrown = { version = "0.14", features = ["raw"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3